--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -14337,3 +14337,16 @@ table.footable-paging-center > tfoot > tr.footable-paging > td {
     background-color: #444c67; }
 
 /*# sourceMappingURL=style.css.map */
+#container {
+    width: 1000px;
+    margin: 20px auto;
+}
+.ck-editor__editable[role="textbox"] {
+    /* editing area */
+    min-height: 200px;
+}
+.ck-content .image {
+    /* block images */
+    max-width: 80%;
+    margin: 20px auto;
+}
