--- a/public/admin/css/custom/index.css
+++ b/public/admin/css/custom/index.css
@@ -258,3 +258,57 @@ footer a {
 footer a:hover {
     color: #FE9705;
 }
+
+
+.col-lg-4 h5 {
+    font-weight: bold;
+    margin: 50px 0px;
+}
+
+.caption-image {
+    position: relative;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.caption-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.caption-image .text-page {
+    color: #fff;
+}
+
+.card-footer {
+    background-color: #4CB8C7;
+}
+
+.box-button-urgent {
+    height: 100px;
+    width: 50px;
+    right: 30px;
+    bottom: 50px;
+    position: fixed;
+    z-index: 999;
+}
+
+.button-urgent {
+    width: 50px;
+    height: 50px;
+}
+
+.button-urgent:nth-child(1) {
+    background-color: #FE9705;
+}
+
+.button-urgent:last-child {
+    background-color: #FA0000;
+}
