--- a/public/admin/css/custom/index.css
+++ b/public/admin/css/custom/index.css
@@ -313,3 +313,35 @@ footer a:hover {
 .button-urgent:last-child {
     background-color: #FA0000;
 }
+
+@media (max-width: 576px) {
+    .text-hero {
+        font-size: 24px;
+        margin-top: 40px;
+    }
+
+    .btn-custom-danger {
+        background-color: #FA0000;
+        color: #fff;
+        border: none;
+        border-radius: 10px;
+        width: 150px;
+        height: 50px;
+        font-size: 18px;
+      }
+
+      .peringatan-dini-hero {
+        display: flex;
+        width: 475px;
+        height: 200px;
+        border-radius: 15px;
+        background-color: #FE9705;
+        padding: 10px;
+        overflow: hidden;
+      }
+
+      .hero {
+        height: 500px;
+        overflow: hidden;
+      }
+ }
